fix warning in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-config-test",
-  "description": "Experimenting with a stripped-down Bootstrap file (no JavaScript and only the bare minimum styles). I am using this test as a way to judge what additional utilities might be necessary. We will also likely experiment with Gulp wiredep and Bower in order to maximize efficiency of pulling in the required assets.",
+  "description": "Experimenting with a stripped-down Bootstrap file, gulp, wiredep, and bower",
   "main": "./app/index.html",
   "authors": [
     "james cool"
